--- a/index.Rmd
+++ b/index.Rmd
@@ -42,10 +42,10 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 
 # R and the tidyverse
 
-This textbook aims to introduce undergraduate students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help getting started using R on their computer, we recommend starting with the [Moving to your own machine] chapter. Figure \@ref(fig:img-chapter-overview) provides an overview of what you will learn in each chapter of this book.
+This textbook aims to introduce undergraduate students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help setting up R on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) provides a summary of a data science pipeline and what aspects of the pipeline you will learn in each chapter of this book.
 
 
-```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="850", fig.retina = 2}
+```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
 ```
 
@@ -121,7 +121,7 @@ In its most basic use-case, `read_csv` expects that the data file:
 Below you'll see the code used to load the data into R using the `read_csv` function. But there is one extra step we need to do first. Since `read_csv` is not included in the base installation of R, 
 to be able to use it, we have to load it from somewhere else: a collection of useful functions known as a *package*. The `read_csv` function, in particular, is in the `tidyverse` package (more on this later), which we load using the `library` function.
 
-Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around filenames and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
+Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
 
 ```{r load_state_property_data, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -137,7 +137,7 @@ read_csv("data/can_lang.csv")
 
 When we loaded the language data collected in the 2016 Canadian census in R above using `read_csv`, we did not give this data frame a name. Therefore the data was just printed on the screen, and we cannot do anything else with it. That isn't very useful; we would like to give a name to the data frame that `read_csv` outputs to use later for analysis and visualization. 
 
-There are two possible ways to assign a name to something in R ---using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, the assignment symbol is preferred and is what we will use in this course. When we name something in R utilizing the assignment symbol, `<-`, we do not need to surround it with quotes like the filename because we are formally telling R about this word and giving it a value. Only characters and words that act as values need to be surrounded by quotes.
+There are two possible ways to assign a name to something in R ---using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, the assignment symbol is preferred and is what we will use in this course. When we name something in R utilizing the assignment symbol, `<-`, we do not need to surround it with quotes like the file name because we are formally telling R about this word and giving it a value. Only characters and words that act as values need to be surrounded by quotes.
 
 Let's now use the assignment symbol to give the name `can_lang` to the language data collected in the 2016 Canadian census data frame that we get from `read_csv`.
 
@@ -145,109 +145,38 @@ Let's now use the assignment symbol to give the name `can_lang` to the language 
 can_lang <- read_csv("data/can_lang.csv")
 ```
 
-Wait a minute! Nothing happened this time! Or at least it looks like that. But actually, something did happen: the data was read in and now has the name `can_lang` associated with it. 
-And we can use that name to access the data frame and do things with it. First, we will type the name of the data frame to print it to the screen.
+Wait a minute! Nothing happened this time! Or at least it looks like that. But actually, something did happen: the data was read in and now has the name `can_lang` associated with it. And we can use that name to access the data frame and do things with it. We can type the name of the data frame to print it to the screen.
 
 
 ```{r print}
 can_lang
 ```
 
-## Creating subsets of data frames with `select` & `filter`
+## Exploring data with visualizations
+Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use
+functions from the `tidyverse` to make visualizations that let us explore relationships in data. Before we start creating visualizations, we should take a closer look at the language data collected in the 2016 Canadian census to familiarize ourselves with it.
 
-Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. 
-The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
-
-Before we start using `select` and `filter`, let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. 
-We will do this by printing the data we loaded earlier in the chapter to the screen. 
+> **A note about the *data* in data science!** 
+> Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
 
 ```{r print_data_again}
 can_lang
 ```
 
-
-In this data frame there are 214 rows rows (corresponding to the 214 languages recorded on the 2016 Canadian census)
-and 6 columns: 
+In this data frame, there are 214 rows (corresponding to the 214 languages recorded on the 2016 Canadian census) and six columns: 
 
 1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
 2. `language`: Language queried about on the Canadian Census.
 3. `mother_tongue`: Total count of Canadians from the Census who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
 4. `most_at_home`: Total count of Canadians from the Census who reported the language as spoken most often at home.
 5. `most_at_work`: Total count of Canadians from the Census who reported the language as used most often at work for the population.
-6. `lang_known`: Total count of Canadians from the Census who reported knowledge of language for the population in private households.
+6. `lang_known`: Total count of Canadians from the Census who reported knowledge of the language for the population in private households.
 
-Now let's use `select` to extract the language column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
-name of the data frame object, which in this example is `can_lang`. The second argument is the column name that we want to select, here `language`. After passing these two arguments,
-the  `select` function returns a single column (the `language` column that we asked for) as a data frame.
-
-
-```{r}
-language_column <- select(can_lang, language)
-language_column
-```
-
-
-### Using `select` to extract multiple columns
-
-We can also use `select` to obtain a subset of the data frame with multiple columns. Again, the first argument is the name of the data frame. 
-Then we list all the columns we want as arguments separated by commas. Here we create a subset of three columns: language, mother tongue, and language spoken most often at home.
-
-```{r}
-three_columns <- select(can_lang, language, mother_tongue, most_at_home)
-three_columns
-```
-
-
-### Using `select` to extract a range of columns
-
-We can also use `select` to obtain a subset of the data frame constructed from a range of columns. To do this we use the colon (`:`) operator to denote the range. 
-For example, to get all the columns in the data frame from `language` to `most_at_home` we pass `language:most_at_home` as the second argument to the `select` function.
-
-```{r}
-column_range <- select(can_lang, language:most_at_home)
-column_range
-```
-
-### Using `filter` to extract a single row
-
-We can use the `filter` function to obtain the subset of rows with desired values from a data frame. Again, our first argument is the name of the data frame object, `can_lang`. 
-The second argument is a logical statement to use when filtering the rows. Here, for example, we'll say that we are interested in rows where the language is Mandarin. To make 
-this comparison, we use the *equivalency operator* `==` to compare the values of the `language` column with the value `"Mandarin"`. Similar to when we loaded the data file and put quotes around the filename, 
-here we need to put quotes around `"Mandarin"` to tell R that this is a character value and not one of the special words that make up R programming language, nor one of the names 
-we have given to data frames in the code we have already written.
-
-With these arguments, `filter` returns a data frame that has all the columns of the input data frame but only the rows we asked for in our logical filter statement. 
-
-```{r}
-mandarin <- filter(can_lang, language == "Mandarin")
-mandarin
-```
-
-### Using `filter` to extract rows with values above a threshold
-
-
-If we are interested in finding information about the languages who have a higher number of people who primarily speak it at home compared to Mandarin---which is reported to have 462890 people speaking it as the primary language they speak in their home---then we can create a filter 
-to obtain rows where the value of `most_at_home` is greater than 462890.
-In this case, we see that `filter` returns a data frame with 2 rows; this indicates that there are two languages that are spoken more often at
-home compared to Mandarin.
-
-```{r}
-spoke_often_at_home <- filter(can_lang, most_at_home > 462890)
-spoke_often_at_home
-```
-
-
-## Exploring data with visualizations
-
-Creating effective data visualizations is an essential piece to any data analysis. For the remainder of Chapter 1, we will learn how to use
-functions from the `tidyverse` to make visualizations that let us explore relationships in data. In particular, we'll develop a visualization
-of the language data collected in the 2016 Canadian census we've been working with that will help us understand two potential relationships in the data:
-first, the relationship between the number of people who speak a language as their mother tongue and the number of people who speak that language as their primary spoken language at home, and second, whether there is a pattern in the strength of this relationship in the higher level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages). This is an example of an exploratory data analysis 
-question: we are looking for relationships and patterns within the data set we have, but are not trying to generalize what we find beyond this data set. 
+We will now develop a visualization of the language data collected in the 2016 Canadian census we've been working with that will help us understand two potential relationships in the data. First, we will explore the relationship between the number of people who speak a language as their mother tongue and the number who speak that language as their primary language spoken at home. Then we will see whether there is a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages). These are examples of exploratory data analysis questions because we are looking for relationships and patterns within the data set we have but are not trying to generalize what we find beyond this data set.  
 
 ### Using `ggplot` to create a scatter plot
 
-Taking another look at our data set below, we can immediately see that the three columns (or variables) we are interested in visualizing---mother tongue, language spoken most at home, and higher level language category---are all in separate columns. In addition, there is a single row (or observation) for each language. 
+Taking another look at our data set below, we can immediately see that the three columns we are interested in visualizing---mother tongue, language spoken most at home, and higher level language category---are all in separate columns. In addition, there is a single row (or observation) for each language. 
 The data are therefore in what we call a *tidy data* format. 
 Tidy data is particularly important concept and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, 
 including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
