added image to explain ggplot function, edited text for grammar and clarity

--- a/index.Rmd
+++ b/index.Rmd
@@ -42,7 +42,7 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 
 # R and the tidyverse
 
-This textbook aims to introduce undergraduate students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help setting up R on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) provides a summary of a data science pipeline and what aspects of the pipeline you will learn in each chapter of this book.
+This textbook aims to introduce students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help setting up R on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) provides a summary of a data science pipeline and what aspects of the pipeline you will learn in each chapter of this book.
 
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
@@ -159,10 +159,6 @@ functions from the `tidyverse` to make visualizations that let us explore relati
 > **A note about the *data* in data science!** 
 > Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
 
-```{r print_data_again}
-can_lang
-```
-
 In this data frame, there are 214 rows (corresponding to the 214 languages recorded on the 2016 Canadian census) and six columns: 
 
 1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
@@ -176,10 +172,9 @@ We will now develop a visualization of the language data collected in the 2016 C
 
 ### Using `ggplot` to create a scatter plot
 
-Taking another look at our data set below, we can immediately see that the three columns we are interested in visualizing---mother tongue, language spoken most at home, and higher level language category---are all in separate columns. In addition, there is a single row (or observation) for each language. 
+Taking another look at our data set below, we can immediately see that the three columns we are interested in visualizing---mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), and higher level language category (`category`)---are all in separate columns. In addition, there is a single row (or observation) for each language. 
 The data are therefore in what we call a *tidy data* format. 
-Tidy data is particularly important concept and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, 
-including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+Tidy data is particularly important concept and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
 
 ```{r}
 can_lang
@@ -188,11 +183,9 @@ can_lang
 We will begin with a scatter plot of the `mother_tongue` and `most_at_home` columns from our data frame.
 To create a scatter plot of these two variables using the `ggplot` function, we do the following: 
 
-1. call the `ggplot` function
-2. provide the name of the data frame as the first argument
-3. call the aesthetic function, `aes`, to specify which column will correspond to the x-axis and which will correspond to the y-axis
-4. add a `+` symbol at the end of the `ggplot` call to add a layer to the plot
-5. call the `geom_point` function to tell R that we want to represent the data points as dots/points to create a scatter plot.
+```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a scatter plot with the ggplot function", out.width="1100", fig.retina = 2}
+knitr::include_graphics("img/ggplot_function.jpeg")
+```
 
 ```{r mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
