edited writing for clarity, removed filter and select as learning objectives

--- a/index.Rmd
+++ b/index.Rmd
@@ -41,15 +41,15 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 ```
 
 # R and the tidyverse
+## Overview
 
-This textbook aims to introduce students to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The remaining chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. For readers who need help setting up R on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) provides a summary of a data science pipeline and what aspects of the pipeline you will learn in each chapter of this book.
-
+This textbook aims to introduce readers to data science. In this book, we define *data science* as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. At a high level, in this book, readers will learn how to (1) use reproducible tools to do data analysis and (2) identify and solve common problems in data science. The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The following six chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. In the final chapter, we discuss how to set up your own computer with tools like R and Jupyter. For readers who need help setting up their system on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
 ```
 
-Four common data science problems that are useful for answering predictive and inferential data analysis questions covered in this book are:
+The four common data science problems that are useful for answering predictive and inferential data analysis questions covered in this book are:
 
 1. Predicting a class/category for a new observation/measurement (e.g., cancerous or benign tumour)
 2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20-year-old females with a BMI of 25).
@@ -81,15 +81,13 @@ By the end of the chapter, students will be able to:
 - use the help and documentation tools in R
 - match the names of the following functions from the `tidyverse` package to their documentation descriptions: 
     - `read_csv` 
-    - `select`
-    - `filter`
     - `mutate`
     - `ggplot`
     - `aes`
 
 ## Loading a spreadsheet-like dataset
 
-Often, the first thing we need to do in data analysis is to load a dataset into R. When we bring spreadsheet-like (think Microsoft Excel tables) data, generally shaped like a rectangle, into R it is represented as what we call a *data frame* object. It is very similar to a spreadsheet where the rows are the collected observations and the columns are the variables. 
+Often, the first step in data analysis is to load a data set into R. When we bring spreadsheet-like (think Microsoft Excel tables) data, generally shaped like a rectangle, into R, it is represented as a *data frame* object. In figure \@ref(fig:img-spreadsheet-vs-dataframe), we can see an R data frame is very similar to a spreadsheet where the rows are the collected observations, and the columns are the variables. 
 
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
@@ -172,9 +170,10 @@ We will now develop a visualization of the language data collected in the 2016 C
 
 ### Using `ggplot` to create a scatter plot
 
-Taking another look at our data set below, we can immediately see that the three columns we are interested in visualizing---mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), and higher level language category (`category`)---are all in separate columns. In addition, there is a single row (or observation) for each language. 
-The data are therefore in what we call a *tidy data* format. 
-Tidy data is particularly important concept and will be a major focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+
+Looking again at our data set below, we can immediately see that the three columns we are interested in visualizing---mother tongue (`mother_tongue`), language spoken most at home (`most_at_home`), and higher-level language category (`category`)---are all in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. 
+Tidy data is a fundamental concept and will be a significant focus in the remainder of this course: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+
 
 ```{r}
 can_lang
@@ -195,33 +194,15 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
 > **In case you have used R before and are curious:** 
 > There are a small number of situations in which you can have a single R expression span multiple lines. 
 > Here, the `+` symbol at the end of the first line tells R that the expression isn't done yet and to
-> continue reading on the next line. While not strictly necessary, this sort of pattern will appear a 
+> continue reading on the following line. While not strictly necessary, this sort of pattern will appear a 
 > lot when using `ggplot` as it keeps things more readable.
 
 
 ### Formatting ggplot objects
 
-It is motivating and exciting that we have already been able to visualize our
-data to help answer our question, but we are not done yet! There is more we can
-(and should) do to improve the interpretability of the data visualization that 
-we created. For example, by default, R uses the column names as the axis labels,
-however, usually these column names do not have enough information about 
-the variable in the column. We really should replace this default with a more
-informative label. For the example above, the column name `mother_tongue` is 
-used as the label for the y-axis, but most people will not know what that is. 
-And even if they did, they will not know how we are measuring mother tongue, nor
-which group of people the measurements were taken. An axis label that 
-read "Mother tongue (number of Canadian residents)" would be much more 
-informative.
+It is exciting that we can already visualize our data to help answer our question, but we are not done yet! We can (and should) do more to improve the interpretability of the data visualization that we created. For example, by default, R uses the column names as the axis labels. However, usually, these column names do not have enough information about the variable in the column. We really should replace this default with a more informative label. For the example above, R uses the column name `mother_tongue` as the label for the y-axis, but most people will not know what that is. And even if they did, they will not know how we measure mother tongue, nor which group of people the measurements were taken. An axis label that reads "Mother tongue (number of Canadian residents)" would be much more informative.
 
-Adding additional layers to our visualizations that we create in `ggplot` is one
-common and easy way to improve and refine our data visualizations. New layers 
-are added to `ggplot` objects using the `+` symbol. For example, we can use the 
-`xlab` and `ylab` functions to add layers where we specify meaningful and 
-informative labels for the x and y axes. Again, since we are specifying words 
-(e.g. `"Mother tongue (number of Canadian residents)"`) as arguments to `xlab` 
-and `ylab`, we surround them with double quotes. There are many more layers we 
-can add to format the plot further, and we will explore these in later chapters.
+Adding additional layers to our visualizations that we create in `ggplot` is one common and easy way to improve and refine our data visualizations. New layers are added to `ggplot` objects using the `+` symbol. For example, we can use the `xlab` and `ylab` functions to add layers where we specify meaningful and informative labels for the x and y axes. Again, since we are specifying words (e.g. `"Mother tongue (number of Canadian residents)"`) as arguments to `xlab` and `ylab`, we surround them with double quotes. We can add many more layers to format the plot further, and we will explore these in later chapters.
 
 ```{r mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
